# city-members

./: CMakeLists.txt  LICENSE  README.md  helper.cpp  helper.h  legia.txt  main.cpp  main.py  main_functions.cpp  polonia.txt  requirements.txt  skrypt.gp
include/: City.h  Config.h  Kibic.h  KibicBaza.h  KibicKwadrat.h  Member.h  MemberBase.h  Miasto.h
src/: City.cpp  Kibic.cpp  KibicBaza.cpp  KibicKwadrat.cpp  Member.cpp  MemberBase.cpp  Miasto.cpp  city.py  member.py  party.py
